# bandwdth-boost-xapp

./: .gitignore  CMakeLists.txt  README.md  calculate__tbs.c  main.c  rnti_array.c  tbs_calculator.c
REST API/: rest_server.py
backup_/: backup  backup2
ran_utils/: CMakeLists.txt  utils.c  utils.h
rest_api/: requirements.txt  rest_server.py
